--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,36 @@
-body{
+body {
   margin: 0;
- }
-.tlp-logo{
+}
+
+.tlp-logo {
   text-align: center;
   background-color: #fff;
- background-size: 100%;
- 
+  background-size: 100%;
+
 }
-.tlp-logo img{
- height: 40px;
- width: auto;
- justify-content: center;
- margin-top: 50px;
- margin-bottom: 40px;
- 
+
+.tlp-logo img {
+  height: 40px;
+  width: auto;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 40px;
+
 }
-.nav-link{
+
+.nav-link {
   color: black;
 }
+
 .top {
   border: solid rgb(176, 176, 176) 1px;
 }
-.dropdown:hover{
+
+.dropdown:hover {
   text-decoration: underline solid rgb(10, 10, 61) 2px;
-  text-underline-position: initial; 
+  text-underline-position: initial;
 }
+
 .dropdown:hover .dropdown-menu {
   display: block;
   opacity: 0.7;
@@ -32,70 +38,85 @@ body{
   margin-top: 10px;
   border-radius: 0px;
 }
-.nav-link{
+
+.nav-link {
   margin-right: 5px;
 }
-.dropdown:hover .dropdown-menu a{
+
+.dropdown:hover .dropdown-menu a {
   color: black;
   font-weight: bold;
   margin-top: -5px;
 }
-.part1{
+
+.part1 {
   background-image: url(../images/blog_pitbull-awareness-day_102418_main.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
-.donate h1{
+
+.donate h1 {
   margin-left: 200px;
   margin-top: 150px;
   color: black;
   font-size: 70px;
 }
+
 .donate-btn {
-  
+
   margin-left: 80%;
   margin-top: -250px;
 }
-.donate-btn button{
-  background-color: rgb(10, 10, 61); 
+
+.donate-btn button {
+  background-color: rgb(10, 10, 61);
   border: none;
   padding: 10px 20px 10px 20px;
   color: #fff;
 }
-.part1b{
+
+.part1b {
   margin-top: 350px;
-  background-color:  rgb(10, 10, 61);
+  background-color: rgb(10, 10, 61);
   color: #fff;
   text-align: center;
   font-weight: bold;
 }
-.part1b h1{
+
+.part1b h1 {
   padding-top: 70px;
 }
-.part1b p{
- font-size: 20px;
- margin-top: 30px;
+
+.part1b p {
+  font-size: 20px;
+  margin-top: 30px;
 }
+
 .part1bi {
   text-align: center;
   margin-top: 30px;
 }
-.part1bi img{
+
+.part1bi img {
   height: 300px;
   width: 300px;
 }
-.sub{
+
+.sub {
   display: inline-flex;
 }
-.sub1{
+
+.sub1 {
   margin-right: 7px;
 }
-.sub2{
- margin-right: 7px;
+
+.sub2 {
+  margin-right: 7px;
 }
-.sub button{
+
+.sub button {
   font-weight: bold;
   color: #fff;
   background-color: rgb(3, 3, 50);
@@ -104,18 +125,48 @@ body{
   border: 0px;
   margin-bottom: 50px;
 }
-.class
-.part2 {
+
+.btn {
+  width: 300px;
+}
+
+.hello {
+  background-image: url(../images/BACKGROUND.webp);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   text-align: center;
   font-size: 20px;
+  height: 5000px8;
+}
+
+.part2 {
   background-color: #fff;
 }
-.part2 h1{
+
+.hello h1 {
   font-weight: bolder;
+  margin-top: 50px;
 }
-video{
+
+video {
   height: 500px;
   width: 1000px;
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+.part3 {
+  background-color: #fff;
+  width: fit-content;
+  justify-self: center;
+  position: absolute;
+  margin-top: 50px;
+  margin-left: 100px;
+}
+
+.part3 h1 {
+  padding-left: 50px;
+  padding-right: 50px;
 }
