--- a/css/style.css
+++ b/css/style.css
@@ -131,21 +131,21 @@ body {
 }
 
 .hello {
-  background-image: url(../images/BACKGROUND.webp);
+  background-image: url(../images/isometric-background-with-cubes-futuristic-geometric-seamless-pattern-optical-illusion-volume_162695-3896.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   text-align: center;
   font-size: 20px;
-  height: 5000px8;
+  
 }
 
 .part2 {
   background-color: #fff;
 }
 
-.hello h1 {
+.part2 h1 {
   font-weight: bolder;
   margin-top: 50px;
 }
@@ -159,14 +159,188 @@ video {
 
 .part3 {
   background-color: #fff;
-  width: fit-content;
-  justify-self: center;
-  position: absolute;
+  width: 850px;
+  text-align: center;
+  margin-left: 200px;
   margin-top: 50px;
-  margin-left: 100px;
+  color: rgb(7, 7, 78);
+  padding-bottom: 30px;
 }
 
 .part3 h1 {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-top: 40px;
+  font-weight: bolder;
+}
+.part3 p{
+  font-size: 18px;
+}
+.part3i {
+  border: solid gainsboro 1px;
+  background-color: ghostwhite;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
+.package-btn {
+  margin: -2px;
+}
+
+.package-btn button {
+  height: 30px;
+  width: 120px;
+  color: teal;
+  border: 1px solid teal;
+  border-radius: 5px;
+  font-size: smaller;
+  margin: 2px;
+  font-weight: bold;
+}
+
+.package-btn button:hover {
+  color: #fff;
+  background-color: teal;
+}
+
+.money-btn button {
+  height: 70px;
+  width: 120px;
+  color: teal;
+  border: 1px solid teal;
+  border-radius: 5px;
+  font-size: smaller;
+  margin: 2px;
+  font-weight: bolder;
+}
+
+.money-btn button:hover {
+  color: #fff;
+  background-color: teal;
+}
+.input-box {
+  width: 750px;
+  text-align: center;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  border: solid gainsboro 1px;
+  height: 50px;
+}
+.money-input {
+  display: flex;
+  margin-left: 250px;
+  margin-bottom: 70px;
+}
+.money-input button {
+  height: 70px;
+  width: 150px;
+  background-color: teal;
+  border: 1px solid teal;
+  border-radius: 5px;
+  font-size: smaller;
+  margin-left: 2px;
+  font-weight: bolder;
+}
+.money-input input{
+  height: 70px;
+  width: 180px;
+  border-radius: 5px;
+}
+.money-input p{
+  
+}
+.adopt{
+  background-color: #fff;
+  margin-top: 50px;
+  padding-top: 90px;
+  padding-bottom: 50px;
+}
+.adopt img{
+  height: 220px;
+  width: 300px;
+  margin-top: 10px;
+}
+.adopt-btn{
+  background-color: rgb(10, 10, 61);
+  border: none;
+  padding: 5px 20px 5px 20px;
+  color: #fff;
+  margin-top: 20px;
+  font-size: small;
+  font-weight: bold;
+}
+.num-div h1{
+  color: #fff;
+  font-weight: bold;
+  font-size: 80px;
+}
+.num-div p{
+  color: hsl(0, 0%, 100%);
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: -40px;
+}
+.num-div {
+  display: flex;
+  margin-left: 250px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.adoptions{
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.testimonies{
+  background-color: #fff;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.testimonies h1{
+  font-weight: bold;
+  color: rgb(5, 5, 49);
+  margin-bottom: 30px;
+}
+.testimony{
+  border: solid 1px teal;
+  width: 450px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  margin-left: 20px;
+}
+.testimony p{
+  margin-bottom: 50px;
+}
+.stories {
+  margin-left: 150px;
+ display: flex;
+}
+.stories2 {
+  margin-left: 150px;
+ display: flex;
+ margin-top: 40px;
+}
+.stories2 .testimony{
+  height: 280px;
+}
+.ending{
+  background-color: rgb(5, 5, 49);
+  color: #fff;
+}
+.end{
+  display: flex;
+}
+.END1{
+  text-align: center;
+  margin-left: 250px;
+}
+.END2{
+  text-align: center;
+  margin-left: 50px;
+}
+.end img{
+  height: 200px;
+  width: 200px;
+}
+.fa-4x{
+  color: #fff;
 }
